--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/node": "^14.17.0",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^1.129.0",
+    "aws-cdk": "^1.134.0",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -40,8 +40,12 @@
     "typescript": "^4.5.3"
   },
   "dependencies": {
-    "@aws-cdk/assert": "^1.129.0",
-    "@aws-cdk/core": "^1.129.0"
+    "@aws-cdk/assert": "^1.134.0",
+    "@aws-cdk/aws-iam": "^1.134.0",
+    "@aws-cdk/aws-lambda": "^1.134.0",
+    "@aws-cdk/aws-s3": "^1.134.0",
+    "@aws-cdk/core": "^1.134.0",
+    "path": "^0.12.7"
   },
   "bundledDependencies": [],
   "license": "Apache-2.0",
